--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -2,6 +2,7 @@
 @import "icons";
 
 @yellow: #ffe42c;
+@green: #37b956;
 @umber: #77331d;
 
 .popover {
@@ -178,6 +179,40 @@ body {
 				padding-bottom: 50px;
 			}
 		}
+		&#redeem {
+
+			background: @green;
+			color: lighten(@green,40%);
+			padding: 20px 0;
+
+			p {
+font-family: @headings-font-family;
+text-transform: uppercase;
+letter-spacing: 2px;
+color: #3860a8;
+font-size: 24px;
+font-weight: 900;
+				margin-bottom: 0px;
+
+				a {
+				color: #fff;
+				font-size: 22px;
+				font-weight: 100;
+				text-decoration: none;
+				border-bottom: solid 2px #fff;
+				margin: 0 auto;
+				line-height: normal;
+				padding: 0;
+				text-transform: uppercase;
+				letter-spacing: 2px;
+
+
+				}
+
+			}
+
+		}
+
 		&#trailer {
 			h2 {
 				font-size: 86px;
@@ -264,15 +299,15 @@ body {
 
 		&#features {
 
-			background: #37b956;
-			color: lighten(#37b956,40%);
+			background: @green;
+			color: lighten(@green,40%);
 			padding: 40px 0;
 
 			h3 {
 				font-size: 62px;
 				color: #fff;
 				text-align: left;
-			  	text-shadow: 2px 2px 0px darken(#37b956,20%);
+			  	text-shadow: 2px 2px 0px darken(@green,20%);
 			}
 			strong {
 				color: #fff;
